Added test for register.

--- a/calendar-api/account/templates/account/index.html
+++ b/calendar-api/account/templates/account/index.html
@@ -4,11 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Account - test view</title>
 </head>
 <body>
 	{{ user }}
 	<button onclick="login()">login</button>
+	<button onclick="register()">register</button>
 	<button onclick="logout()">logout</button>
 </body>
 <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
